--- a/_posts/2014-07-02-code4lib-2015.md
+++ b/_posts/2014-07-02-code4lib-2015.md
@@ -13,17 +13,17 @@ Pre-conferences will be held Monday February 9, and the main conference on Febru
 
 **Code of Conduct**
 
-The [Code4Lib Code of Conduct](http://code4lib.org/content/2015-code-conduct) is in force at every Code4Lib gathering. Please read it, abide by it, and help to enforce it.
+The [Code4Lib Code of Conduct](/conference/2015/code-conduct) is in force at every Code4Lib gathering. Please read it, abide by it, and help to enforce it.
 
 **Program**
 
-This year's conference boasts an impressive program covering a wide range of technical, metadata and management topics. See the [full conference schedule](http://code4lib.org/conference/2015/schedule) for more information.
+This year's conference boasts an impressive program covering a wide range of technical, metadata and management topics. See the [full conference schedule](/conference/2015/schedule) for more information.
 
 [Lightning Talks](http://wiki.code4lib.org/2015_Lightning_Talks)
 
 **Preconferences**
 
-Preconferences are 1-day or a 1/2-day events and workshops that will occur on Monday, February 9, 2015. Preconferences can be seen on the [wiki page](http://wiki.code4lib.org/2015_Preconference_Proposals).  Registration for preconferences will occur with conference registration. Please show your interest in particular preconferences by adding your name to the list below the abstract. Room assignments for preconferences will be based on interest expressed through the wiki.
+Preconferences are 1-day or a 1/2-day events and workshops that will occur on Monday, February 9, 2015. Preconferences can be seen on the [wiki page](http://wiki.code4lib.org/2015_Preconference_Proposals). Registration for preconferences will occur with conference registration. Please show your interest in particular preconferences by adding your name to the list below the abstract. Room assignments for preconferences will be based on interest expressed through the wiki.
 
 **Keynotes**
 
@@ -51,9 +51,9 @@ _The block room rate will be $139_ for a single or double room.
 
 The block rate is available from Sunday, February 8th - Thursday, February 12th.
 
-If you'd like to extend your stay, we encourage you to call the Hilton Portland directly (503) 226-1611 and ask for In-House Reservations.  Be sure to let them know you are with the Code4Lib 2015 conference, they MAY be able to give you the conference rate for the entirety of your stay.  
+If you'd like to extend your stay, we encourage you to call the Hilton Portland directly (503) 226-1611 and ask for In-House Reservations.  Be sure to let them know you are with the Code4Lib 2015 conference, they MAY be able to give you the conference rate for the entirety of your stay.
 
-Please use this <a href="https://resweb.passkey.com/Resweb.do?mode=welcome_ei_new&eventID=11714845">link</a> for reservations during the times listed above.  
+Please use this <a href="https://resweb.passkey.com/Resweb.do?mode=welcome_ei_new&eventID=11714845">link</a> for reservations during the times listed above.
 
 Alternately, you can book on <a href="http://www3.hilton.com/en/index.html">www.hilton.com</a> and use the code __OUS__ to make a discounted reservation.
 
