--- a/_posts/2014-11-16-store.md
+++ b/_posts/2014-11-16-store.md
@@ -4,22 +4,15 @@ layout: post
 title: Store
 created: 1416178397
 ---
-<div id="ss"
-</div>
+<div id="ss"></div>
 <script type="text/javascript" src="//spreadshirt.github.io/apps/spreadshirt.js"></script>
 <script type="text/javascript">
     spreadshirt.create("shop", {
         shopId: 514495, // your shop id
         platform: "NA", // or NA
         target: document.getElementById("ss"),
-        width: "100%",    
+        width: "100%",
         height: "1000px"
-
-
-      
     }, function(err, app) {
-
-        
-
     } );
 </script>
