--- a/_posts/2015-02-21-code4lib-2015-videos.md
+++ b/_posts/2015-02-21-code4lib-2015-videos.md
@@ -5,4 +5,4 @@ layout: post
 title: Code4Lib 2015 videos
 created: 1424551895
 ---
-All of [Code4Lib 2015](http://code4lib.org/conference/2015/) was recorded and the videos are available on the [YouTube Code4Lib channel](https://www.youtube.com/user/code4lib/videos).
+All of [Code4Lib 2015](/conference/2015/) was recorded and the videos are available on the [YouTube Code4Lib channel](https://www.youtube.com/user/code4lib/videos).
