--- a/_posts/2017-03-17-slack.md
+++ b/_posts/2017-03-17-slack.md
@@ -3,7 +3,7 @@ categories: []
 layout: post
 title: Slack
 created: 1489786432
+permalink: /slack/
 ---
-<script>
-window.location = "https://docs.google.com/forms/d/120Dw1JjLxPJB9VTGl0mUY7Ot6yg6YNY1RZUISJFzdwk/viewform?c=0&w=1";
-</script>
+
+<script> window.location = "https://docs.google.com/forms/d/120Dw1JjLxPJB9VTGl0mUY7Ot6yg6YNY1RZUISJFzdwk/viewform?c=0&w=1"; </script>
