fix con post permalinks
con category is plural, but in permalink path its singular :upside_down_face:

--- a/_posts/2023-09-27-code4lib-2024.md
+++ b/_posts/2023-09-27-code4lib-2024.md
@@ -1,9 +1,9 @@
 ---
 categories:
-- conference
+- conferences
 layout: post
 title: Code4Lib 2024
-permalink: /conferences/2024/
+permalink: /conference/2024/
 ---
 
 Code4Lib 2024 will be held in Ann Arbor, MI from May 13 to May 16.
