add 2024 conference links (#61)

--- a/_posts/2022-11-07-code4lib-2023.md
+++ b/_posts/2022-11-07-code4lib-2023.md
@@ -3,7 +3,7 @@ categories:
 - conferences
 layout: post
 title: Code4Lib 2023
-permalink: /conferences/2023/
+permalink: /conference/2023/
 ---
 
 Code4Lib 2023 will be held in Princeton, NJ from March 14-17.
